--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "prod": "cross-env NODE_ENV=production nuxt",
+    "build:dev": "cross-env NODE_ENV=development nuxt build",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "pm2": "pm2 start npm -- start",
     "test": "jest"
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "pm2": "^3.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
