--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
     "vue-jest": "^3.0.3"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3131"
+    }
   }
 }
